# fdi-sbc-25JSP

./: README.md  main.py  pyproject.toml
doc/: design.md
kb/: automocion.kb
sbc/: __main__.py  cli.py  engine.py  models.py  parser.py
test/: test_engine.py
